--- a/src/Components/component.module.css
+++ b/src/Components/component.module.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .blueButton{
   border-radius: 2.1875rem;
   background: linear-gradient(180deg, #2F6973 0%, #55A2A8 45.83%, #91C7C7 100%);
